# cockpit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  known_deps  liveplot.cpp  liveplot.ui  main.cpp
app/: CMakeLists.txt
app/include/: imgui_impl_opengl3.h
app/src/: imgui_impl_opengl3.cpp  main.cpp
include/: liveplot.h
